[package]
name = "lost-ranger"
version = "0.1.0"
authors = ["Jared Forsyth"]
edition = "2018"

[dependencies]
stretch = "0.2.2"
raylib = { git = 'https://github.com/deltaphc/raylib-rs.git' }
specs = { version = "0.14", features = ["nightly"]}
specs-derive = "0.4"
specs-hierarchy = "0.3"
hibitset = { version = "0.5.2", features = ["parallel"] }
nphysics2d = "0.12"
ncollide2d = "0.20.1"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
ron = "0.5.1"
serde = "*"
lazy_static = "1.3.0"
rand = "*"

libretto = {path="./libretto"}

# rhai = { path="./rhai" }
# ketos = "*"
# ketos_derive = "0.11.0"

sxd-document = "0.3.2"
sxd-xpath = "0.4.2"