[package]
name = "libretto"
version = "0.1.0"
authors = ["Jared Forsyth <jared@jaredforsyth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unescape = "*"
pest = "*"
pest_derive = "*"
ron = "0.5.1"
serde = "*"
serde_json = "*"
im-rc = "*"